--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src=""></script>
+    <script src="js/modulegraphique.js"></script>
+    <script src="js/test.js"></script>
     <link rel="stylesheet" href="css/canvas.css">
     <meta charset="utf-8">
 </head>
