--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<?php
-
-?>
 <html>
 <head>
+    <script src="js/game/globalvariables.js"></script>
     <script src="js/graphique/Color.js"></script>
     <script src="js/graphique/GraphicalObject.js"></script>
+    <script src="js/graphique/AngledObject.js"></script>
     <script src="js/game/Team.js"></script>
     <script src="js/bullets/Bullet.js"></script>
+    <script src="js/planes/Plane.js"></script>
+    <script src="js/planes/Player.js"></script>
     <script src="js/game/game.js"></script>
     <link rel="stylesheet" href="css/canvas.css">
     <meta charset="utf-8">
