--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/game/Team.js"></script>
     <script src="js/bullets/Bullet.js"></script>
     <script src="js/planes/Plane.js"></script>
+    <script src="js/planes/FallingEnemy.js"></script>
     <script src="js/powerups/Powerup.js"></script>
     <script src="js/planes/Player.js"></script>
     <script src="js/game/game.js"></script>
