--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/planes/FallingEnemy.js"></script>
     <script src="js/powerups/Powerup.js"></script>
     <script src="js/planes/Player.js"></script>
+    <script src="js/levels/Level.js"></script>
     <script src="js/game/game.js"></script>
     <link rel="stylesheet" href="css/canvas.css">
     <meta charset="utf-8">
