Adding version to HTML

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <div id="posCanvas">
         <canvas id="myCanvas" width="600" height="800"></canvas>
     </div>
+    <div id="version"><p>Version 2.0 in-dev</p></div>
 </body>
 </html> 
