--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/bullets/Bullet.js"></script>
     <script src="js/powerups/Powerup.js"></script>
     <script src="js/planes/Plane.js"></script>
-    <script src="js/planes/FallingEnemy.js"></script>
+    <script src="js/planes/BasicEnemy.js"></script>
     <script src="js/planes/Player.js"></script>
     <script src="js/levels/Level.js"></script>
     <script src="js/game/game.js"></script>
@@ -17,9 +17,11 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <div id="posCanvas">
-        <canvas id="myCanvas" width="600" height="800"></canvas>
-    </div>
+    <section>
+        <div id="posCanvas">
+            <canvas id="myCanvas" width="600" height="800"></canvas>
+        </div>
+    </section>
     <div id="version"><p>Version 2.0 in-dev</p></div>
 </body>
 </html> 
